--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,7 +13,7 @@
             <div class="card-body">
               <h2 class="card-title"><%= @project.name %></h2>
               <p class="card-text"><%= @project.description %></p>
-              <%= link_to 'Edit', edit_project_path(@project), class: "btn btn-primary" if logged_in?(:labor_staff) %>
+              <%= link_to 'Edit', edit_project_path(@project), class: "btn btn-primary" if logged_in?(:admin) %>
               <%= link_to 'See all projects', projects_path, class: "btn btn-outline-primary" %>
             </div>
           </div>
