--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -2,12 +2,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Edit Booking #<%= @booking.id.to_s %> </h4>
+        <h4 class="modal-title">Edit User #<%= @user.name %> </h4>
 
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       </div>
       <div class="modal-body">
-        <%= render 'form', booking: @booking %>
+        <%= render 'form', user: @user %>
       </div>
     </div>
   </div>
