--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -3,13 +3,13 @@
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
-        <%= form.hidden_field :user_id, value: current_user.id if logged_in?(:user) && !logged_in?(:labor_staff) %>
+        <%= form.hidden_field :user_id, value: current_user.id if logged_in?(:user) && !logged_in?(:admin) %>
         <%= form.label :project %>
         <%= form.collection_select :project_id, Project.all,:id,:name, include_blank: true, class: "form-control"   %>
       </div>
       <div class="form-group">
-        <%= form.label :status if logged_in?(:labor_staff) %>
-        <%= form.collection_select :booking_status_id, BookingStatus.all,:id,:name, include_blank: true, class: "form-control"  if logged_in?(:labor_staff) %>
+        <%= form.label :status if logged_in?(:admin) %>
+        <%= form.collection_select :booking_status_id, BookingStatus.all,:id,:name, include_blank: true, class: "form-control"  if logged_in?(:admin) %>
       </div>
       <div class="form-group">
         <%= form.label :message %>
@@ -33,7 +33,7 @@
         <%= form.submit "Submit", class: "btn btn-primary btn-block"   %>
       </div>
     </div>
-    <% if logged_in?(:labor_staff) %>
+    <% if logged_in?(:admin) %>
     <div class="col-md-3">
       <div class="form-group">
         <%= link_to 'Delete',
