--- a/app/views/page/contact.html.erb
+++ b/app/views/page/contact.html.erb
@@ -14,7 +14,7 @@
         <h3>Phone</h3>
         <p><%=  number_to_phone "04040404XXX" %></p>
         <h3>Email</h3>
-        <p>example@mylab.com</p>
+        <p>example@my-lab.rdb</p>
     </div>
     <div class="col-md-4">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2369.378019179828!2d10.031367215615703!3d53.5688697657214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18ec9b32a6b19%3A0x36d5137d53bf255e!2sFinkenau+35%2C+22081+Hamburg!5e0!3m2!1sen!2sde!4v1498017472804" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
