--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -5,7 +5,7 @@
 	  <h6 class="card-title"><%= link_to project.name, project_show_path(project)  %></h6>
 	  <p class="card-text"><%= project.description %></p>
 	</div>
-	<% if logged_in?(:labor_staff) %>
+	<% if logged_in?(:admin) %>
 	<button class="btn btn-primary"><%= link_to "Edit", edit_project_path(project) %></button>
 	<button class="btn btn-danger"><%= link_to "Delete", project_path(project), method: :delete, data: { confirm: 'Are you sure?' } %></button>
 	<% end %>
