added background photo for home

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -175,3 +175,13 @@
   margin-bottom: 0.5rem;
 }
 
+.jumbotron {
+  background: url('https://s3.eu-central-1.amazonaws.com/haw-rdb-lab/uploads/bg2.jpg') no-repeat;
+  margin-bottom: 0px;
+  background-size: cover;
+  height: 300px;
+  color: white;
+  text-shadow: #1d1e1f 0.2em 0.2em 0.2em;
+}
+
+
