show/hide description and legal disclosure

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -175,7 +175,7 @@
   margin-bottom: 0.5rem;
 }
 
-.jumbotron {
+.bg {
   background: url('https://s3.eu-central-1.amazonaws.com/haw-rdb-lab/uploads/bg2.jpg') no-repeat;
   margin-bottom: 0px;
   background-size: cover;
