--- a/app/views/equipment/_equipment_view.html.erb
+++ b/app/views/equipment/_equipment_view.html.erb
@@ -18,9 +18,9 @@
         var $this = $(this);
         $this.toggleClass('view-details');
         if($this.hasClass('view-details')){
-            $this.text('More... »');
+            $this.text('Show description');
         } else {
-            $this.text('... »Less');
+            $this.text('Hide description');
         }
     });
 </script>
