--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,6 +1,25 @@
 <section class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3">About</h1>
-    <p class="lead">My favorite laboratory where I can find the equipments I need for my projects.</p>
+    <p class="lead">A demo website for booking and managing laboratory equipment.</p>
   </div>
 </section>
+
+<div class="container">
+  <h4>  Legal Disclaimer:</h4>
+
+  <p>
+    The information contained in this website is primarily for educational purpose. As this website is only a beta version, the representations used by the collaborators i.e. images, graphs and others, are open to being inaccurate and purely hypothetical/for demonstrative reasons.
+
+  </p>
+
+  <p>
+    The sources of all images of products used in the website’s e-laboratory catalogue are referenced in the documentation. The inclusion of any links however, does not necessarily imply a recommendation or endorsement for the views expressed within them.
+
+  </p>
+  <p>
+    While mutual effort is made to keep the website up and running smoothly, we take no personal responsibility for, and will not be liable for, the website being temporarily unavailable due to technical or other reasons.
+
+  </p>
+
+</div>
