removed equipment status

--- a/app/views/equipment/_equipment_view.html.erb
+++ b/app/views/equipment/_equipment_view.html.erb
@@ -1,9 +1,9 @@
 <main class="col-12 col-md-9 col-xl-10 px-4 pt-4">
   <%= yield %>
 
-  <%= link_to "Add New Equipment", new_equipment_path, class: "btn btn-success" if logged_in?(:admin) %>
+  <%= link_to "Add New Equipment", new_equipment_path, class: "btn btn-primary " if logged_in?(:admin) %>
 
-  <div class="row">
+  <div class="row padding-top">
     <%= render partial: 'labor_item', collection: @labor_items, booking_item: @booking_item %>
   </div>
 </main>
