--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container ml-content pt-4">
-  <%= link_to "Add New Project",  new_project_path, class: "btn btn-success" if logged_in?(:admin)  %>
-  <div class="row">
+  <%= link_to "Add New Project",  new_project_path, class: "btn btn-primary" if logged_in?(:admin)  %>
+  <div class="row padding-top">
     <%= render @projects %>
    </div>
 </div>
