--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -18,6 +18,10 @@
     </div>
     <div class="col-md-6">
       <div class="form-group">
+        <%= form.label :user if logged_in?(:admin) %>
+        <%= form.collection_select :user_id, User.all,:id,:name, include_blank: true, class: "form-control"  if logged_in?(:admin) %>
+      </div>
+      <div class="form-group">
         <%= form.label :pickup_date %>
         <%= form.text_field :pickup_date, class: "form-control datepicker", :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true', 'date-start-date' => '0d'} %>
       </div>
