fixed list row buttons layout

--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -13,14 +13,14 @@
 
         <div class="col-12 col-sm-12 col-md-6">
           <%= form_for booking_item do |f| %>
-            <div class="input-group tooltip-toggle col-6 col-sm-6 col-md-3 order-1 order-sm-1 text-right" aria-label="Minimum: 1, maximum: available amount" tabindex="0">
-              <span class="input-group">
+            <div class="input-group tooltip-toggle text-right" aria-label="Minimum: 1, maximum: available amount" tabindex="0">
+              <span class="input-group col-6">
                 <%= f.number_field :quantity, value: booking_item.quantity.to_i, class: "form-control", min: 1, max: labor_item.available_quantity(params[:pickup_date], params[:return_date])  %>
               </span>
-              <span class="col-6 col-sm-6 col-md-3 order-1 order-sm-1 text-right">
+              <span class="col-6 text-right">
                 <%= f.submit "Update" , class: "btn btn-primary" %>
               </span>
-              <span class="col-8 col-sm-8 col-md-3 order-1 order-sm-2 text-right">
+              <span class="col-6 text-right">
                 <%= link_to "Remove" , booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your list" }, method: :delete, class: "btn btn-danger" } %>
               </span>
             </div>
