--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -28,32 +28,30 @@
               </p>
               <%= link_to 'Equipment', equipment_index_path, class: "btn btn-info" if logged_in?(:user) %>
           <% else %>
-              <% @booking_items.each do |booking_item| %>
-                <div class="list-group-item">
-                  <% @labor_items.each do |labor_item| %>
-                    <div class="row">
-                        <div class="col-4 col-sm-3 col-md-2 mb-3">
-                          <%= image_tag equipment_img(labor_item.thumb_image, 'thumb'), class: "img-fluid rounded" %>
+            <div class="list-group-item">
+              <% @labor_items.each do |labor_item| %>
+                <div class="row">
+                    <div class="col-4 col-sm-3 col-md-2 mb-3">
+                      <%= image_tag equipment_img(labor_item.thumb_image, 'thumb'), class: "img-fluid rounded" %>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-8 order-2 order-sm-1">
+                      <div class="row">
+                        <div class="col-12 col-sm-12 col-md-6">
+                          <h6><%= labor_item.name + " - " +(labor_item.inv_nr).to_s %></h6>
                         </div>
 
-                        <div class="col-12 col-sm-6 col-md-8 order-2 order-sm-1">
-                          <div class="row">
-                            <div class="col-12 col-sm-12 col-md-6">
-                              <h6><%= labor_item.name + " - " +(labor_item.inv_nr).to_s %></h6>
-                            </div>
-
-                            <div class="col-12 col-sm-12 col-md-6">
-                              <div class="input-group tooltip-toggle text-right" aria-label="Minimum: 1, maximum: available amount" tabindex="0">
-                                <span class="input-group col-7">
-                                  <%= booking_item.quantity.to_i  %>
-                                </span>
-                              </div>
-                            </div>
+                        <div class="col-12 col-sm-12 col-md-6">
+                          <div class="input-group tooltip-toggle text-right" aria-label="Minimum: 1, maximum: available amount" tabindex="0">
+                            <span class="input-group col-7">
+                              <%= labor_item.quantity.to_i  %>
+                            </span>
                           </div>
                         </div>
                       </div>
                     </div>
-                  <% end %>
+                  </div>
+                </div>
               <% end %>
           <% end %>
       </div>
