--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -15,7 +15,7 @@
           <%= form_for booking_item do |f| %>
             <div class="input-group tooltip-toggle text-right" aria-label="Minimum: 1, maximum: available amount" tabindex="0">
               <span class="input-group col-7">
-                <%= f.number_field :quantity, value: booking_item.booking_quantity.to_i, class: "form-control", min: 1, max: labor_item.available_quantity(params[:pickup_date], params[:return_date])  %>
+                <%= f.number_field :booking_quantity, value: booking_item.booking_quantity.to_i, class: "form-control", min: 1, max: labor_item.available_quantity(params[:pickup_date], params[:return_date])  %>
               </span>
               <span class="col-6 text-right">
                 <%= f.submit "Update" , class: "btn btn-primary" %>
