changed Edit Booking Details to Booking Details

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container ml-content">
-  <h3 class="card-title">Edit Booking Details </h3>
+  <h3 class="card-title">Booking Details </h3>
   <div class="row">
     <div class="col-md-6">
       <%= render "form", booking: @booking %>
