fixed admin board layout

--- a/app/views/admin_board/show.html.erb
+++ b/app/views/admin_board/show.html.erb
@@ -1,5 +1,5 @@
-<section class="ml-content">
-  <section class="wrapper">
+<section class="container ml-content">
+  <section class="padding-top wrapper">
     <h3><i class="fa fa-angle-right"></i> Booking Analysis</h3>
     <!-- page start-->
     <div class="tab-pane" id="chartjs">
