--- a/app/views/admin_board/show.html.erb
+++ b/app/views/admin_board/show.html.erb
@@ -1,10 +1,10 @@
-<section class="container ml-content">
+<section class="container ml-content mb-5">
   <section class="padding-top wrapper">
     <h3><i class="fa fa-angle-right"></i> Booking Analysis</h3>
     <!-- page start-->
     <div class="tab-pane" id="chartjs">
-      <div class="row mt">
-        <div class="col-lg-6">
+      <div class="row">
+        <div class="col-lg-6 mt-5">
           <div class="content-panel">
             <h4><i class="fa fa-angle-right"></i> Bookings by project </h4>
             <div class="panel-body text-center">
@@ -13,7 +13,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 mt-5">
           <div class="content-panel">
             <h4><i class="fa fa-angle-right"></i> Booking items by category</h4>
             <div class="panel-body text-center">
@@ -23,8 +23,8 @@
           </div>
         </div>
       </div>
-      <div class="row mt">
-        <div class="col-lg-6">
+      <div class="row">
+        <div class="col-lg-6 mt-5">
           <div class="content-panel">
             <h4><i class="fa fa-angle-right"></i> Bookings by days of the week </h4>
             <div class="panel-body text-center">
@@ -33,7 +33,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 mt-5">
           <div class="content-panel">
             <h4><i class="fa fa-angle-right"></i> Bookings by months of the year </h4>
             <div class="panel-body text-center">
