--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,16 +1,21 @@
-
 <div class="container ml-content">
-  <h3 class="card-title">Booking Details </h3>
-  <div class="row">
-    <div class="col-md-6">
-      <%= render "form", booking: @booking %>
-    </div>
-    <div class="col-md-6">
-      <h5>Equipment list:</h5>
-      <% @booking_items.each do |booking_item| %>
-        <%= render 'list/list_row', booking_item: booking_item, labor_item: booking_item.equipment %>
-      <% end %>
+  <div class="row justify-content-md-center">
+    <div class="col-xs-12 col-xl-10 mt-5 mb-5">
+      <div class="card">
+        <div class="card-body">
+
+          <h2 class="card-title">Booking #<%= @booking.id.to_s %></h2>
+
+          <% @booking_items.each do |booking_item| %>
+            <%= render 'list/list_row', booking_item: booking_item, labor_item: booking_item.equipment %>
+          <% end %>
+
+          <hr>
+
+          <%= render "form", booking: @booking %>
+
+        </div>
+      </div>
     </div>
   </div>
-
-</div> 
+</div>
