--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -1,45 +1,39 @@
 <%= form_for(@labor_item) do |f| %>
 
-  <div class="row">
-    <div class="col-md-6">
-      <div class="form-group ">
-        <%= f.label :name %><br />
-        <%= f.text_field :name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :inv_nr, 'Inventory Number' %><br />
-        <%= f.text_field :inv_nr, autofocus: true, class: "form-control"  %>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-2">
-          <%= f.label :quantity %>
-          <%= f.number_field :quantity, autocomplete: "off", class: "form-control"  %>
-        </div>
+  <div class="form-row">
+    <div class="form-group col-md-4">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+    <div class="form-group col-md-3">
+      <%= f.label :inv_nr, 'Inventory Number' %>
+      <%= f.text_field :inv_nr, autofocus: true, class: "form-control"  %>
+    </div>
+    <div class="form-group col-md-2">
+      <%= f.label :quantity %>
+      <%= f.number_field :quantity, autocomplete: "off", class: "form-control"  %>
+    </div>
+    <div class="form-group col-md-3">
+      <%= f.label :category_id %>
+      <%= f.collection_select :category_id, Category.all,:id,:name, {:autocomplete => "off", :include_blank => "none"}, {:class => 'custom-select w-100'}  %>
+    </div>
 
 <!--        <div class="form-group  col-md-3">
           <!-- f.label :status  %>
           <!-- f.collection_select :equipment_status_id, EquipmentStatus.all,:id,:name, include_blank: true, autocomplete: "off", class: "form-control"  %>
         </div>-->
 
-        <div class="form-group  col-md-1">
-          <%= f.label :category_id %>
-          <%= f.collection_select :category_id, Category.all,:id,:name, include_blank: true, autocomplete: "off", class: "form-control dropdown-toggle"  %>
-        </div>
-      </div>
+    <div class="form-group col-md-6">
+      <%= f.label :main_image %>
+      <%= f.file_field :main_image, class:'form-control-file' %>
     </div>
-    <div class="col-md-6">
-      <div class="form-group ">
-        <%= f.label :description %>
-        <%= f.text_area :description, autocomplete: "off", class: "form-control", rows: 3  %>
-      </div>
-      <div class="form-group ">
-        <%= f.label :main_image %>
-        <span><%= f.file_field :main_image, class:'btn btn-light' %></span>
-      </div>
-      <div class="form-group ">
-        <%= f.label :thumb_image %>
-        <span><%= f.file_field :thumb_image, class:'btn btn-light' %></span>
-      </div>
+    <div class="form-group col-md-6">
+      <%= f.label :thumb_image %>
+      <%= f.file_field :thumb_image, class:'form-control-file' %>
+    </div>
+    <div class="form-group col-md-12">
+      <%= f.label :description %>
+      <%= f.text_area :description, autocomplete: "off", class: "form-control", rows: 3  %>
     </div>
   </div>
 
