--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -9,7 +9,7 @@
           <div class="col-xs-12 col-md-6">
             <div class="card-body">
               <h2 class="card-title"><%= @labor_item.name + " - " +(@labor_item.inv_nr).to_s %></h2>
-              <%= link_to 'Edit', edit_equipment_path(@labor_item) if logged_in?(:admin) %>
+              <%= link_to 'Edit', edit_equipment_path(@labor_item), class: "btn btn-primary" if logged_in?(:admin) %>
               <%= link_to 'Back', equipment_index_path, class: "btn btn-primary" %>
             </div>
           </div>
