--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,15 @@
 <div class="container ml-content">
-  <h2>Add new project</h2>
+  <div class="row justify-content-md-center">
+    <div class="col-xs-12 col-xl-10 mt-5 mb-5">
+      <div class="card">
+        <div class="card-body">
 
-  <%= render "form", project: @project %>
+		  <h2>Add new project</h2>
+
+		  <%= render "form", project: @project %>
+  
+		</div>
+	  </div>
+    </div>
+  </div>
 </div>
