--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,29 @@
-<div class="container ml-content pt-4">
-  <h3><i class="fa fa-angle-right"></i> Users overview</h3>
-  <div class="row">
+<div class="container ml-content">
+  <div class="row justify-content-md-center">
+    <div class="col-xs-12 col-xl-10 mt-5 mb-5">
+      <div class="card">
 
-    <div class="row mt">
-      <div class="col-md-12">
-        <div class="content-panel">
-          <table class="table table-striped table-advance table-hover">
-            <thead>
-            <tr>
-              <th><i class="fa fa-bullhorn"></i> Name </th>
-              <th class="hidden-phone"><i class="fa fa-question-circle"></i> Address</th>
-              <th><i class="fa fa-bookmark"></i> Matriculation Number</th>
-              <th><i class=" fa fa-edit"></i> Roles </th>
-              <th></th>
-            </tr>
-            </thead>
-            <tbody>
-              <%= render @users %>
+        <div class="card-body">
+          <h2 class="card-title">Users</h2>
+        </div>
 
-            </tbody>
-          </table>
-        </div><!-- /content-panel -->
-      </div><!-- /col-md-12 -->
-    </div><!-- /row -->
+        <table class="table table-striped">
+          <thead>
+          <tr>
+            <th><i class="fa fa-bullhorn"></i> Name </th>
+            <th class="hidden-phone"><i class="fa fa-question-circle"></i> Address</th>
+            <th><i class="fa fa-bookmark"></i> Matriculation Number</th>
+            <th><i class=" fa fa-edit"></i> Roles </th>
+            <th>Actions</th>
+          </tr>
+          </thead>
+          <tbody>
+            <%= render @users %>
+
+          </tbody>
+        </table>
+
+      </div>
+    </div>
   </div>
-</div><!-- /MAIN CONTENT -->
+</div>
